@@ -8,6 +8,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   mount points.  Previously it may have failed to output some mount points.
   [bug introduced in coreutils-8.21]
 
+  df now processes symbolic links to disk device nodes correctly.  Previously
+  df displayed the symlink's device rather than that for the device node.
+  [This bug was present in "the beginning".]
+
   install now removes the target file if the strip program failed for any
   reason.  Before, that file was left behind, sometimes even with wrong
   permissions.
